--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <name>tv-show-utils</name>
     <url>http://maven.apache.org</url>
     <dependencies>
-
         <!-- TEST -->
         <dependency>
             <groupId>junit</groupId>
@@ -20,6 +19,13 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>1.10.8</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>no.nith.sivpal12</groupId>
+            <artifactId>testing-utils</artifactId>
+            <version>0.1.1</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
